src/styles/footer.css
.page-footer{
    background-color: #0e1b2c;
    height: 300px;
}
.footer-resp{
    /* text-align: center; */
    margin-left: 250px;
    margin-right: 20px;

}
.footer-text{
    font-size: 24px;
    line-height: 2;
    font-family: "Bebas";
    color:#fff;
    padding-top: 28px;
}
.footer-text-content{
    color:  #ddd;
    line-height: 1.75;
}
.footer-links{
    margin:24px 0;
}
.footer-text-content{
color:  #ddd;
line-height: 1.75;
}
.c-secondary{
    color:#f8d16c!important;
}
.f-link{
margin-left: 12px;
}
.footer-social a i{
color:#fff;
padding: 8px;
margin-right: 8px;
background-color: #223144;
border-radius: 4px;
width:28px;
text-align:center;
transition: color 0.2s;
}
.footer-social a i:hover{
color: #f8d16c;
}






@media(max-width: 768px){
    .row{
        flex-direction: column;
    }
    .page-footer{
        background-color: #0e1b2c;
        height: 500px;
    }
    .footer-resp{
      /* text-align: center; */
      margin-left: 30px;
      margin-right: 40px;

    }
    .main-image{
      background-image: none!important;
      background-color: #293b52;
    }

  }

